--- a/css/style.css
+++ b/css/style.css
@@ -41,9 +41,10 @@ button {
   height: 44px;
   border: 0;
   box-shadow: 0px 4px 7px #00000040;
+  cursor: pointer;
 }
 
-img {
+.Logo Mange img {
   width: 120px;
   height: 24px;
 }
@@ -58,6 +59,7 @@ h1 {
 section.introduction {
   display: flex;
   justify-content: space-between;
+  flex-wrap: wrap;
 }
 
 p {
@@ -75,9 +77,9 @@ section {
   margin: 28px 0px;
 }
 
-img.graphics {
-  height: 100%;
-  width: 100%;
+img.principal-logo {
+  width: 120px;
+  height: 24px;
 }
 
 .introduction p {
@@ -89,6 +91,7 @@ img.graphics {
 section.characteristics {
   display: flex;
   justify-content: space-between;
+  flex-wrap: wrap;
 }
 
 h2 {
@@ -309,6 +312,7 @@ li {
   page-break-inside: avoid;
   break-inside: avoid;
 }
+
 @media (max-width: 375px) {
   .comments:first-child {
     display: flex;
@@ -324,54 +328,50 @@ li {
     display: none;
   }
 
-  .section.introduction {
-    display: flex;
-    flex-direction: column;
-  }
-
-  .introduction h1 {
-    font-size: ;
-    letter-spacing: 0;
-  }
-
-  .section.introduction div graphics {
-    display: flex;
-  }
-
   nav {
     display: flex;
     flex-direction: column;
   }
 
-  main {
-    display: flex;
-    flex-direction: column;
+  nav ul {
+    display: none;
+  }
+
+  nav button {
+    display: none;
   }
 
   .introduction div {
-    width: 45%;
-    margin: 28px 0px;
+    width: 350px;
+    margin: -28px 0px;
+    justify-content: center;
   }
 
-  img.graphics {
-    height: 20%;
-    width: 100%;
-    position: relative;
-  }
-
-  .characteristics article {
+  main {
     display: flex;
+    flex-direction: column;
+    justify-content: center;
+  }
+
+  .introduction {
+    flex-direction: column-reverse;
+  }
+
+  .characteristics {
     flex-direction: column;
     flex-wrap: wrap;
   }
 
-  .get-started-container section {
-    display: flex;
+  .characteristics h2 article {
+  }
+
+  .get-started-container {
     flex-direction: column;
   }
 
   footer {
     display: flex;
     flex-direction: row;
+    flex-direction: row-reverse;
   }
 }
